Update docs setup and add coverage page

--- a/docs/coverage.qmd
+++ b/docs/coverage.qmd
@@ -1,6 +1,14 @@
 ---
 title: "Coverage"
+engine: julia
 ---
 
+```{julia}
+#| echo: false
+#| output: false
+using LocalCoverage
+coverage = generate_coverage(; run_test=true)
+html_coverage(coverage; dir=joinpath(@__DIR__, "_site", "coverage"), open=false)
+```
 
 <iframe src="coverage/index.html" width="100%" height="800px" style="border:none;"></iframe>
