Auto-resize coverage iframe to fit content

--- a/docs/coverage.qmd
+++ b/docs/coverage.qmd
@@ -12,4 +12,17 @@ html_coverage(coverage; dir=joinpath(@__DIR__, "_site", "coverage"), open=false)
 rm(joinpath(dirname(@__DIR__), "coverage"); recursive=true, force=true)
 ```
 
-<iframe src="coverage/index.html" width="100%" height="800px" style="border:none;"></iframe>
+<iframe id="coverage-iframe" src="coverage/index.html" width="100%" style="border:none; overflow:hidden;" scrolling="no"></iframe>
+
+<script>
+(function() {
+    var iframe = document.getElementById('coverage-iframe');
+    function resize() {
+        try {
+            iframe.style.height = iframe.contentDocument.documentElement.scrollHeight + 'px';
+        } catch(e) {}
+    }
+    iframe.addEventListener('load', resize);
+    window.addEventListener('resize', resize);
+})();
+</script>
